--- a/Blurred-Background-Popup/style.css
+++ b/Blurred-Background-Popup/style.css
@@ -17,9 +17,9 @@ body {
 h1 {
   font-size: 60px;
   color: white;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   letter-spacing: 2px;
-  text-shadow: 2px 2px 4px rgba(0,0,0,0.4);
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
 }
 
 .btn {
@@ -29,7 +29,7 @@ h1 {
   background-color: aqua;
   border: none;
   border-radius: 5px;
-  font-size: 20px; 
+  font-size: 20px;
 }
 
 .btn:hover {
@@ -51,10 +51,10 @@ h1 {
   display: flex;
   flex-direction: column;
   padding: 20px;
-  background: url('https://images.unsplash.com/photo-1485527172732-c00ba1bf8929?w=1000&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fG9mZmVyfGVufDB8fDB8fHww');
+  background: url("https://images.unsplash.com/photo-1752477296332-4194308c025f?q=80&w=1160&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
   background-size: cover;
   border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
   opacity: 1;
   transition: all 0.7s;
 }
@@ -64,11 +64,6 @@ h2 {
   margin: 10px 0;
   font-family: sans-serif;
   color: blueviolet;
-}
-
-label {
-  color: black;
-  font-family: sans-serif;
 }
 
 .popup-btn {
