--- a/Real-Time-Character-Counter/style.css
+++ b/Real-Time-Character-Counter/style.css
@@ -17,20 +17,34 @@ body {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
 
-.textarea {
+textarea {
+  width: 95%;
+  min-height: 100px;
+  line-height: 20px;
+  padding: 5px;
+}
+.grow-wrap {
+  display: gird;
+}
+.grow-wrap::after {
+  content: attr(data-replicated-value);
+  white-space: pre-wrap;
+  visibility: hidden;
+  grid-area: 1 / 1;
+}
+
+.grow-wrap > textarea {
   resize: none;
-  width: 100%;
-  height: 100px;
-  font-size: 16px;
-  font-family: sans-serif;
-  padding: 10px;
-  box-sizing: border-box;
-  border: solid 2px darkgray;
+  overflow: hidden;
+  border: 1px solid black;
+  padding: 0.5rem;
+  font: inherit;
+  grid-area: 1 / 1;
 }
 
 .counter-container {
-  display:  flex;
-  justify-content: space-between;
+  display: flex;
+  justify-content: flex-end;
   padding: 0 5px;
 }
 
@@ -41,8 +55,4 @@ body {
 
 .total-counter {
   color: saddlebrown;
-}
-
-.remaining-counter {
-  color: orangered;
 }
