--- a/Password-Generator/style.css
+++ b/Password-Generator/style.css
@@ -151,6 +151,8 @@ input[type="checkbox"] {
   appearance: none;
   cursor: pointer;
   outline: none;
+  position: relative;
+  transition: all 0.3s;
 }
 
 input[type="checkbox"]:checked {
@@ -165,4 +167,90 @@ input[type="checkbox"]:checked::after {
   top: 50%;
   transform: translate(-50%, -50%);
   font-size: 12px;
+}
+
+#length-value {
+  font-weight: 600;
+  color: var(--primary-color);
+  width: 30px;
+  text-align: center;
+  background: #e2e8f0;
+  border-radius: 4px;
+  padding: 2px 5px;
+}
+
+button {
+  width: 100%;
+  padding: 1rem;
+  background: linear-gradient(
+    45deg,
+    var(--primary-color),
+    var(--secondary-color)
+  );
+  color: white;
+  border: none;
+  border-radius: 10px;
+  font-weight: 600;
+  cursor: pointer;
+  transition: all 0.3s;
+  margin-bottom: 1.5rem;
+  box-shadow: 0 4px 8px rgba(43, 88, 118, 0.2);
+}
+
+button:hover {
+  transform: translateY(-2px);
+}
+
+button:hover {
+  transform: translateY(0);
+}
+
+.strength-container {
+  margin-top: 0.8rem;
+}
+
+.strength-container p {
+  font-size: 0.9rem;
+  color: #4a5568;
+  margin-bottom: 0.6rem;
+  display: flex;
+  justify-content: space-between;
+  font-weight: 500;
+}
+
+#strength-label {
+  color: var(--primary-color);
+  font-weight: 600;
+}
+
+.strength-meter {
+  height: 10px;
+  background-color: #edf2f7;
+  border-radius: 5px;
+  margin-top: 0.5rem;
+  overflow: hidden;
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+}
+
+.strength-bar {
+  height: 100%;
+  width: 0;
+  min-width: 5%;
+  background-color: (var(--weak-color));
+  transition: all 0.3s ease;
+  border-radius: 5px;
+}
+
+@media (max-width: 768px) {
+  .container {
+    width: 95%;
+    padding: 1.8rem;
+  }
+
+  h1 {
+    font-size: 1.6rem;
+  }
+  .option label {
+    font-size: 0.9rem;
+  }
 }
